--- a/app/src/main/res/layout/jobreq_screen.xml
+++ b/app/src/main/res/layout/jobreq_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/header"
         android:layout_alignParentTop="true"
         android:padding="5dp"
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content">
         <LinearLayout
             android:id="@+id/iv_exit"
+            android:layout_alignParentStart="true"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:gravity="center">
@@ -21,21 +22,61 @@
                 android:src="@drawable/icon_exit">
             </ImageView>
         </LinearLayout>
+        <LinearLayout
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_header_jobrole"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Full Stack Developer"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:visibility="gone">
+            </TextView>
+
+            <TextView
+                android:id="@+id/tv_header_compname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="XYZ Technologies"
+                android:textSize="12sp"
+                android:visibility="gone">
+            </TextView>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_alignParentEnd="true"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/icon_three_dots">
+            </ImageView>
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/header">
 
         <LinearLayout
-            android:id="@+id/body"
+            android:id="@+id/ll_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/ll_jobtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
@@ -141,6 +182,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="100dp"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 android:orientation="vertical">
@@ -212,17 +254,18 @@
 
     <LinearLayout
         android:id="@+id/footer"
-        android:paddingBottom="15dp"
+        android:paddingBottom="12dp"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/white">
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="12dp"
             android:background="#ededed">
         </View>
 
