--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -28,6 +28,7 @@
                 android:textSize="40dp" />
 
             <ImageView
+                android:id="@+id/iv_logout"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_centerVertical="true"
