--- a/app/src/main/res/layout/sample_jobreqcard.xml
+++ b/app/src/main/res/layout/sample_jobreqcard.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_reqcard"
+    android:elevation="8dp"
+    android:foreground="@drawable/ripple_effect"
     android:layout_marginBottom="10dp"
     android:padding="10dp">
 
