--- a/app/src/main/res/layout-v23/sample_jobreqcard.xml
+++ b/app/src/main/res/layout-v23/sample_jobreqcard.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="@drawable/ripple_effect"
-    android:background="@drawable/bg_reqcard"
+    android:background="@color/white"
     android:layout_marginBottom="10dp"
     android:padding="10dp">
 
