Remodified login & signup background

--- a/app/src/main/res/drawable/bg_inputbox_focused.xml
+++ b/app/src/main/res/drawable/bg_inputbox_focused.xml
@@ -4,6 +4,7 @@
     <solid android:color="#FFFFFF" />
     <corners android:radius="8dp" />
     <stroke
-        android:color="#E5E4E2"
+        android:color="#0088ff"
         android:width="2dp" />
+
 </shape>
