--- a/app/src/main/res/drawable/bg_button_signup.xml
+++ b/app/src/main/res/drawable/bg_button_signup.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/white"></solid>
+    <solid android:color="#e51e26"></solid>
     <corners android:radius="10dp"></corners>
 
 </shape>
