--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parent_layout"
     android:orientation="vertical"
-    android:background="#e51e26"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,15 +19,28 @@
             android:layout_height="wrap_content"
             android:text="rexroot"
             android:textSize="50dp"
-            android:textColor="@color/white"
+            android:textColor="#e51e26"
             android:textStyle="bold">
         </TextView>
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="powered by impetusON"
-            android:textColor="@color/white">
-        </TextView>
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="powered by">
+            </TextView>
+            <ImageView
+                android:layout_marginLeft="8sp"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:src="@drawable/impetuson_logo_cropped">
+            </ImageView>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
@@ -59,7 +72,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:text="Email Address"
-                    android:textColor="@color/white">
+                    android:textStyle="bold"
+                    android:textColor="@color/black">
                 </TextView>
 
                 <EditText
@@ -68,6 +82,8 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_inputbox"
                     android:hint="Eg: john@example.com"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:padding="12dp">
                 </EditText>
 
@@ -85,7 +101,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:text="Password"
-                    android:textColor="@color/white">
+                    android:textStyle="bold"
+                    android:textColor="@color/black">
                 </TextView>
 
                 <EditText
@@ -95,6 +112,8 @@
                     android:background="@drawable/bg_inputbox"
                     android:hint="Enter your password"
                     android:inputType="textPassword"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:padding="12dp">
                 </EditText>
 
@@ -112,7 +131,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Forgot Password"
-                    android:textColor="#D3D3D3">
+                    android:textColor="@color/black">
                 </TextView>
 
             </LinearLayout>
@@ -127,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="By logging in, you agree to our Terms &amp; Conditions, and Privacy Policy of our application"
-                    android:textColor="#D3D3D3">
+                    android:textColor="@color/black">
                 </TextView>
 
             </LinearLayout>
@@ -141,7 +160,7 @@
                 android:paddingRight="50dp"
                 android:text="Log in"
                 android:textAllCaps="false"
-                android:textColor="#e51e26"
+                android:textColor="@color/white"
                 android:textStyle="bold">
             </androidx.appcompat.widget.AppCompatButton>
 
@@ -158,7 +177,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Don't have an account?  "
-                android:textColor="@color/white">
+                android:textColor="@color/black">
             </TextView>
 
             <TextView
@@ -166,7 +185,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/click_here"
-                android:textColor="#D3D3D3">
+                android:textColor="#e51e26">
             </TextView>
 
         </LinearLayout>
