--- a/app/src/main/res/layout/jobreq_screen.xml
+++ b/app/src/main/res/layout/jobreq_screen.xml
@@ -7,9 +7,10 @@
     <RelativeLayout
         android:id="@+id/header"
         android:layout_alignParentTop="true"
-        android:padding="5dp"
+        android:paddingTop="5dp"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="60sp">
         <LinearLayout
             android:id="@+id/iv_exit"
             android:layout_alignParentStart="true"
@@ -60,7 +61,14 @@
                 android:src="@drawable/icon_three_dots">
             </ImageView>
         </LinearLayout>
-
+        <View
+            android:id="@+id/v_elevation"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone"
+            android:background="#ededed">
+        </View>
     </RelativeLayout>
 
     <ScrollView
@@ -296,7 +304,7 @@
 
     <LinearLayout
         android:id="@+id/footer"
-        android:paddingBottom="12dp"
+        android:paddingBottom="5dp"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -307,20 +315,46 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="5dp"
             android:background="#ededed">
         </View>
 
-        <Button
-            android:id="@+id/btn_submitresume"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15sp"
-            android:text="Submit Resume"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textStyle="bold">
-        </Button>
+            android:weightSum="1">
+
+            <Button
+                android:id="@+id/btn_submitresume"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_weight="0.5"
+                android:padding="15sp"
+                android:text="Submit Resume(s)"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textStyle="bold">
+            </Button>
+            <Button
+                android:id="@+id/btn_uploadresume"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_weight="0.5"
+                android:padding="15sp"
+                android:text="Upload"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textStyle="bold">
+            </Button>
+
+
+        </LinearLayout>
+
+
 
 
     </LinearLayout>
