--- a/app/src/main/res/layout/jobreq_screen.xml
+++ b/app/src/main/res/layout/jobreq_screen.xml
@@ -167,6 +167,7 @@
                     android:text="Job Description">
                 </TextView>
 
+
                 <TextView
                     android:id="@+id/tv_jobdesc"
                     android:layout_width="match_parent"
@@ -175,6 +176,18 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="16sp"
                     android:text="">
+                </TextView>
+
+                <TextView
+                    android:id="@+id/tv_showmore"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="textEnd"
+                    android:textColor="#808080"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="16sp"
+                    android:text="Show more">
                 </TextView>
 
             </LinearLayout>
@@ -294,9 +307,116 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="#ededed"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:id="@+id/rl_submitted"
+                        android:padding="10sp"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_centerVertical="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:text="Submitted">
+                        </TextView>
+
+                        <ImageView
+                            android:layout_width="30sp"
+                            android:layout_height="30sp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/icon_downarrow64px">
+                        </ImageView>
+
+                    </RelativeLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_submitted"
+                        android:layout_width="match_parent"
+                        android:layout_height="200sp"
+                        android:visibility="gone">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <RelativeLayout
+                        android:id="@+id/rl_rejected"
+                        android:padding="10sp"
+                        android:background="#ededed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_centerVertical="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:text="Rejected">
+                        </TextView>
+
+                        <ImageView
+                            android:layout_width="30sp"
+                            android:layout_height="30sp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/icon_downarrow64px">
+                        </ImageView>
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <RelativeLayout
+                        android:id="@+id/rl_accepted"
+                        android:padding="10sp"
+                        android:background="#ededed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_centerVertical="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:text="Accepted">
+                        </TextView>
+
+                        <ImageView
+                            android:layout_width="30sp"
+                            android:layout_height="30sp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/icon_downarrow64px">
+                        </ImageView>
+
+                    </RelativeLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
-
 
         </LinearLayout>
 
