--- a/app/src/main/res/layout/jobreq_screen.xml
+++ b/app/src/main/res/layout/jobreq_screen.xml
@@ -317,7 +317,6 @@
                     <RelativeLayout
                         android:id="@+id/rl_submitted"
                         android:padding="10sp"
-
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -345,7 +344,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="200sp"
                         android:visibility="gone">
-
                     </androidx.recyclerview.widget.RecyclerView>
 
                 </LinearLayout>
@@ -353,7 +351,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginTop="10dp"
+                    android:background="#ededed"
+                    android:orientation="vertical">
 
                     <RelativeLayout
                         android:id="@+id/rl_rejected"
@@ -381,12 +381,21 @@
 
                     </RelativeLayout>
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_rejected"
+                        android:layout_width="match_parent"
+                        android:layout_height="200sp"
+                        android:visibility="gone">
+                    </androidx.recyclerview.widget.RecyclerView>
+
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginTop="10dp"
+                    android:background="#ededed"
+                    android:orientation="vertical">
 
                     <RelativeLayout
                         android:id="@+id/rl_accepted"
@@ -413,6 +422,13 @@
                         </ImageView>
 
                     </RelativeLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_accepted"
+                        android:layout_width="match_parent"
+                        android:layout_height="200sp"
+                        android:visibility="gone">
+                    </androidx.recyclerview.widget.RecyclerView>
 
                 </LinearLayout>
 
