Implemented Displaying submissions

--- a/app/src/main/res/layout/jobreq_screen.xml
+++ b/app/src/main/res/layout/jobreq_screen.xml
@@ -346,6 +346,16 @@
                         android:visibility="gone">
                     </androidx.recyclerview.widget.RecyclerView>
 
+                    <TextView
+                        android:id="@+id/tv_ssubtext"
+                        android:padding="10sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No results available"
+                        android:visibility="gone">
+
+                    </TextView>
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -388,6 +398,14 @@
                         android:visibility="gone">
                     </androidx.recyclerview.widget.RecyclerView>
 
+                    <TextView
+                        android:id="@+id/tv_rsubtext"
+                        android:padding="10sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No results available"
+                        android:visibility="gone" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -429,6 +447,14 @@
                         android:layout_height="200sp"
                         android:visibility="gone">
                     </androidx.recyclerview.widget.RecyclerView>
+
+                    <TextView
+                        android:id="@+id/tv_asubtext"
+                        android:padding="10sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No results available"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
