--- a/app/src/main/res/layout-v23/jobreq_card.xml
+++ b/app/src/main/res/layout-v23/jobreq_card.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="12sp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="15sp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="30sp"
-    app:cardCornerRadius="12sp"
     android:background="@color/white"
     android:foreground="@drawable/ripple_effect"
     android:orientation="vertical">
@@ -113,44 +113,42 @@
             android:layout_below="@+id/jobreq_row1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="10sp"
-            android:paddingEnd="10sp"
-            android:paddingBottom="10sp">
+            android:padding="10sp">
 
             <TextView
                 android:id="@+id/tv_priceperclosure"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
                 android:paddingStart="10sp"
                 android:text="30K"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
             <LinearLayout
+                android:id="@+id/btn_submitresume"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
-                android:background="#ededed"
+                android:background="@drawable/bg_attachresume"
                 android:padding="10sp">
 
                 <ImageView
                     android:layout_width="20sp"
                     android:layout_height="20sp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/icon_attach">
-                </ImageView>
+                    android:src="@drawable/icon_upload"></ImageView>
 
                 <TextView
+                    android:id="@+id/tv_buttontext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="5sp"
-                    android:text="Attach Resume"
-                    android:textSize="12sp">
-                </TextView>
+                    android:layout_marginStart="10sp"
+                    android:text="Submit Resume"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"></TextView>
 
             </LinearLayout>
 
