Modified Job Req card

--- a/app/src/main/res/layout-v23/jobreq_card.xml
+++ b/app/src/main/res/layout-v23/jobreq_card.xml
@@ -109,8 +109,34 @@
 
         </RelativeLayout>
 
+        <LinearLayout
+            android:id="@+id/jobreq_row2"
+            android:layout_below="@id/jobreq_row1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="20sp"
+            android:paddingEnd="20sp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:text="Skills: ">
+            </TextView>
+
+            <TextView
+                android:id="@+id/tv_jobskills"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="">
+            </TextView>
+
+        </LinearLayout>
+
         <RelativeLayout
-            android:layout_below="@+id/jobreq_row1"
+            android:layout_below="@+id/jobreq_row2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10sp">
