--- a/app/src/main/res/layout/jobreq_screen.xml
+++ b/app/src/main/res/layout/jobreq_screen.xml
@@ -126,20 +126,66 @@
 
                 </LinearLayout>
                 <TextView
-                    android:id="@+id/tv_jobplace"
+                    android:id="@+id/tv_companylocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
                     android:textColor="#808080"
                     android:text="Chennai, Tamil Nadu">
                 </TextView>
-                <TextView
-                    android:id="@+id/tv_jobtype"
+                <LinearLayout
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="#808080"
+                        android:text="Job Type: ">
+                    </TextView>
+                    <TextView
+                        android:id="@+id/tv_jobtype"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="#808080"
+                        android:text="On-site">
+                    </TextView>
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:background="#ededed">
+            </View>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:text="Required Skills">
+                </TextView>
+
+                <TextView
+                    android:id="@+id/tv_jobskills"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:textSize="16sp"
-                    android:textColor="#808080"
-                    android:text="Job Type: On-site">
+                    android:text="">
                 </TextView>
 
             </LinearLayout>
