Job Req card fixes

--- a/app/src/main/res/layout-v23/jobreq_card.xml
+++ b/app/src/main/res/layout-v23/jobreq_card.xml
@@ -96,12 +96,12 @@
                     android:layout_gravity="start"/>
 
                 <TextView
-                    android:id="@+id/jobPlaceTextView"
+                    android:id="@+id/tv_jobsubtext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#808080"
                     android:textSize="12sp"
-                    android:text="Chennai, Tamil Nadu (On-site)"
+                    android:text=""
                     android:layout_gravity="start"/>
 
             </LinearLayout>
