Fixed refresh timing

--- a/app/src/main/res/layout/jobreq_screen.xml
+++ b/app/src/main/res/layout/jobreq_screen.xml
@@ -276,8 +276,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:visibility="visible">
-                    </ProgressBar>
+                        android:visibility="visible"></ProgressBar>
 
                     <LinearLayout
                         android:id="@+id/ll_submissions_row1"
